deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1  # Adjust as needed
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: nginx:latest
          resources:
            limits:
              cpu: "1"  # Adjust CPU limit as needed
              memory: "100Mi"  # Adjust memory limit as needed
          ports:
            - containerPort: 80
